--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
          <div class="row mb-3">
                <img class="img-fluid" src="images/collage/stool.jpg" alt="">
          </div>      
+         <div class="row mb-3">
+            <img class="img-fluid" src="images/photos/a-1.jpg" alt="">
+      </div>      
 
 </div>
 <div class="col-4"> 
@@ -47,7 +50,10 @@
                      <div class="row mb-3">
                               <img class="img-fluid" src="images/collage/lens.jpg" alt="">      
                      </div>
-                     
+                     <div class="row mb-3">
+                        <img class="img-fluid" src="images/photos/a-2.jpg" alt="">      
+               </div>
+               
 </div>
 
 
